<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="230dp"
    android:background="@drawable/button_bg">

    <ImageView
        android:id="@+id/iv_alert"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/alert" />

    <TextView
        android:id="@+id/tv_alert_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_alert"
        android:layout_centerHorizontal="true"
        android:text="@string/alert_box_title"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_alert_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_alert_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:maxLines="2"
        android:text="@string/alert_message"
        android:textColor="#b3b3b3"
        android:textSize="16sp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tv_alert_message"
        android:layout_marginTop="25dp"
        android:background="#b3b3b3" />

    <Button
        android:id="@+id/btn_try_again"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_alert_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="#ffffff"
        android:text="@string/try_again"
        android:textAllCaps="false"
        android:textColor="#b3b3b3"
        android:textSize="16sp" />

</RelativeLayout>