<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/tv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_forgot_details"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/tv_forgot_details"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="madfood"
        android:textColor="@android:color/white"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/tv_home_assistant"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sig_up_layout"
        android:layout_alignStart="@+id/sig_up_layout"
        android:layout_alignTop="@+id/tv_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/app_tag_line"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/first_name_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/tv_home_assistant"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/pwd_creation_bg"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/et_email_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.95"
            android:background="@null"
            android:gravity="start"
            android:hint="Enter your email"
            android:inputType="textEmailAddress"
            android:paddingLeft="30dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#b3b3b3"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/last_name_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/first_name_layout"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/pwd_creation_bg"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.8"
            android:background="@null"
            android:gravity="start"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingLeft="30dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#b3b3b3"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/password_toggle_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/iv_view_password"
                android:layout_width="18dp"
                android:layout_height="14dp"
                android:layout_centerInParent="true"
                android:background="?attr/selectableItemBackground"
                android:gravity="start"
                android:paddingLeft="3dp"
                android:src="@drawable/eye"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="16sp"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/iv_no_view_password"
                android:layout_width="18dp"
                android:layout_height="14dp"
                android:layout_centerInParent="true"
                android:background="?attr/selectableItemBackground"
                android:gravity="start"
                android:paddingLeft="3dp"
                android:src="@drawable/eye_off"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="16sp"
                android:visibility="gone" />
        </RelativeLayout>


    </LinearLayout>


    <RelativeLayout
        android:id="@+id/layout_btn_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/last_name_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_bg"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/tv_login_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Log In"
            android:textColor="#b3b3b3"
            android:textSize="16sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_forgot_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/forgot_login_details"
        android:textColor="#b3b3b3"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/sig_up_layout"
        android:layout_marginBottom="15dp"
        android:background="#211645" />

    <LinearLayout
        android:id="@+id/sig_up_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/no_account"
            android:textColor="#b3b3b3"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>


</RelativeLayout>
