<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/tv_fragment_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_forgot_details"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/tv_forgot_details"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="madfood"
        android:textColor="@android:color/white"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/tv_home_assistant"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sig_up_layout"
        android:layout_alignStart="@+id/sig_up_layout"
        android:layout_alignTop="@+id/tv_fragment_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/app_tag_line"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_choose_username"
        android:layout_width="250dp"
        android:layout_height="19dp"
        android:layout_below="@id/tv_home_assistant"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/choose_username"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="visible" />


    <LinearLayout
        android:id="@+id/username_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/tv_choose_username"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/pwd_creation_bg"
        android:orientation="horizontal"
        android:visibility="visible">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:gravity="start"
            android:hint="Enter your email"
            android:inputType="textEmailAddress"
            android:paddingLeft="30dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#b3b3b3"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/tv_choose_username"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/pwd_creation_bg"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="1">


        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.95"
            android:background="@null"
            android:gravity="start"
            android:hint="Enter password"
            android:inputType="textPassword"
            android:paddingLeft="30dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#b3b3b3"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_show_password"
            android:layout_width="18dp"
            android:layout_height="14dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/eye"
            android:gravity="start"
            android:paddingLeft="3dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="16sp"
            android:visibility="visible" />


    </LinearLayout>

    <TextView
        android:id="@+id/tv_username_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username_layout"
        android:layout_alignStart="@+id/username_layout"
        android:layout_below="@+id/username_layout"
        android:layout_marginRight="30dp"
        android:layout_marginTop="12dp"
        android:singleLine="true"
        android:textColor="#ffadb7"
        android:textSize="15sp"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/layout_btn_next"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/tv_username_error"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/tv_btn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/next"
            android:textColor="#b3b3b3"
            android:textSize="16sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_proceed"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/password_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_bg"
        android:clickable="true"
        android:elevation="3dp"
        android:focusable="true"
        android:fontFamily="sans-serif"
        android:text="Next"
        android:textAllCaps="false"
        android:textColor="#b3b3b3"
        android:textSize="16sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/existing_account_text"
            android:textColor="#b3b3b3"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:text="@string/log_in"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>


</RelativeLayout>