<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/tv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:background="@drawable/group" />

    <TextView
        android:id="@+id/tv_home_assistant"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/assistant_text"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_enter_username"
        android:layout_width="250dp"
        android:layout_height="19dp"
        android:layout_below="@id/tv_home_assistant"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:gravity="center"
        android:text="@string/enter_name"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/first_name_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/tv_enter_username"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/pwd_creation_bg"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.95"
            android:background="@null"
            android:gravity="start"
            android:hint="First Name"
            android:paddingLeft="30dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#b3b3b3"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/last_name_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/first_name_layout"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/pwd_creation_bg"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.95"
            android:background="@null"
            android:gravity="start"
            android:hint="@string/last_name"
            android:paddingLeft="30dp"
            android:paddingStart="30dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#b3b3b3"
            android:textSize="16sp" />


    </LinearLayout>


    <Button
        android:id="@+id/btn_complete"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/last_name_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_bg"
        android:clickable="true"
        android:elevation="3dp"
        android:focusable="true"
        android:fontFamily="sans-serif"
        android:text="Next"
        android:textAllCaps="false"
        android:textColor="#b3b3b3"
        android:textSize="16sp" />


</RelativeLayout>
